fixed menu wrapping

--- a/css/custom.css
+++ b/css/custom.css
@@ -33,7 +33,7 @@ h1 {
   margin: 1rem 0;
 }
 
-@media (min-width: 550px) {
+@media (min-width: 750px) {
   .navbar-logo {
     display: block;
   }
